syntax = "proto3";

package wallet;

option java_multiple_files = true;
option java_package = "bisq.wallet.protobuf";

// The WalletService definition.
service Wallet {
    rpc IsWalletReady (IsWalletReadyRequest) returns (IsWalletReadyResponse);
    rpc GetUnusedAddress (GetUnusedAddressRequest) returns (GetUnusedAddressResponse);
    rpc GetWalletAddresses (GetWalletAddressesRequest) returns (GetWalletAddressesResponse);
    rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse);
    rpc ListUtxos (ListUtxosRequest) returns (ListUtxosResponse);
    rpc SendToAddress (SendToAddressRequest) returns (SendToAddressResponse);
    rpc IsWalletEncrypted (IsWalletEncryptedRequest) returns (IsWalletEncryptedResponse);
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);
    rpc GetSeedWords (GetSeedWordsRequest) returns (GetSeedWordsResponse);
    rpc EncryptWallet (EncryptWalletRequest) returns (EncryptWalletResponse);
    rpc DecryptWallet (DecryptWalletRequest) returns (DecryptWalletResponse);
}



message IsWalletReadyRequest {}

message IsWalletReadyResponse {
    bool ready = 1;
}

message GetUnusedAddressRequest {}

message GetUnusedAddressResponse {
    string address = 1;
}

message GetWalletAddressesRequest {}

message GetWalletAddressesResponse {
    repeated string addresses = 1;
}

message ListTransactionsRequest {}

message ListTransactionsResponse {
    repeated Transaction transactions = 1;
}

message ListUtxosRequest {}

message ListUtxosResponse {
    repeated Utxo utxos = 1;
}

message SendToAddressRequest {
    optional string passphrase = 1;
    string address = 2;
    sint64 amount = 3;
}

message SendToAddressResponse {
    string txId = 1;
}

message IsWalletEncryptedRequest {}

message IsWalletEncryptedResponse {
    bool encrypted = 1;
}

message GetBalanceRequest {}

message GetBalanceResponse {
    // Balance in satoshis
    sint64 balance = 1;
}

message GetSeedWordsRequest {}

message GetSeedWordsResponse {
    repeated string seedWords = 1;
}

message EncryptWalletRequest {
    string password = 1;
}

message EncryptWalletResponse {
    bool success = 1;
}

message DecryptWalletRequest {
    string password = 1;
}

message DecryptWalletResponse {
    bool success = 1;
}

message TransactionInput {
    string prevOutTxId = 1;
    int32 prevOutIndex = 2;
    int64 sequenceNumber = 3;
    string scriptSig = 4;
    string witness = 5;
}

message TransactionOutput {
    sint64 value = 1;
    string address = 2;
    string scriptPubKey = 3;
}

message Transaction {
    string txId = 1;
    repeated TransactionInput inputs = 2;
    repeated TransactionOutput outputs = 3;
    int32 lockTime = 4;
    int32 height = 5;
    int64 date = 6; // Unix timestamp
    int32 confirmations = 7;
    sint64 amount = 8;
    bool incoming = 9;
}

message Utxo {
    string txId = 1;
    int32 vout = 2;
    sint64 amount = 3;
    string address = 4;
    int32 confirmations = 5;
}
